# harveySpector

./: .env.example  .gitignore  README.md  docker-compose.yml  sample_board_resolution.docx
backend/: .env.example  Dockerfile  init.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/knowledge_base/: __init__.py  index_builder.py  ingest_act.py  seed_from_fallback.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: __init__.py  analyze.py  chat.py  documents.py
backend/app/services/: citation_verifier.py  document_processor.py  embeddings.py  llm_service.py  rag_pipeline.py  vector_store.py
backend/app/utils/: helpers.py
backend/data/: harvey_fallback.db
backend/data/companies_act_2013/: .gitkeep
backend/tests/: __init__.py  test_doc.txt  test_document_processor.py
frontend/: package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/analyze/: analyze.module.css  page.tsx
frontend/src/app/api/cases/: route.ts
frontend/src/app/chat/: chat.module.css  page.tsx
frontend/src/app/dashboard/: dashboard.module.css  page.tsx
frontend/src/app/sign-in/: auth.module.css  page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/components/layout/: Footer.module.css  Footer.tsx  Navbar.module.css  Navbar.tsx
frontend/src/lib/: auth-client.ts  auth.ts  prisma.ts
scratch/: apply_production_indexes.py  check_analysis_json.py  check_chunks.py  check_supabase.py  test_live_site.js
(+5 files in other folders)
